package com.example.samplecalc.controller;

public interface OnDisplayNumObserver {
    abstract public void onChange(String num);
}
