@startuml
MainActivity --> InputContract
MainActivity ..|> OnDisplayNumObserver
CalcController ..|> InputContract
CalcController ..|> StateContract
CalcController -- CalcModel
State --> StateContract
CalcModel --> OnDisplayNumObserver

State <|.. NumberAState
State <|.. NumberBState
State <|.. ResultState
State <|.. OperationState

CalcModel -- Operation

class MainActivity{
}

interface InputContract {
  +{abstract} onInputNumber(String)
  +{abstract} onInputOperation(Operation)
  +{abstract} onInputEqual()
  +{abstract} setDisplayNumObserver(OnDisplayNumObserver)
}

class CalcController {
  -CalcModel model
  -State state
}


class CalcModel {
  -BigDecimal numA
  -BigDecimal numB
  -String dispNum
  - Opetation ope
  - OnDisplayNumObserver observer
}

interface OnDisplayNumObserver{
  + {abstract} onChange(String)
}
interface StateContract {
  + {abstract} changeState(State)
}

interface State {
  + {abstract} InputNumber(String, StateContract, CalcModel)
  + {abstract} InputOperation(Operation, StateContract, CalcModel)
  + {abstract} InputEqual(StateContract, CalcModel)
}

class NumberAState {
}

class OperationState {
}

class NumberBState {
}

class ResultState {
}

enum Operation{
  PLUS
  MINUS
  MULTI
  DIV

  +eval(int,int)
}


note right of InputContract
  Activityの入力処理を通知するインターフェース
end note
@enduml